Fix on app.json

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "GastitosReactNative",
-  "displayName": "GastitosReactNative"
+  "name": "AwesomeProject",
+  "displayName": "AwesomeProject"
 }
