--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,14 +3,12 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'AwesomeProject' do
+target 'Gastitos' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
 
-  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
-
-  target 'AwesomeProjectTests' do
+  target 'GastitosTests' do
     inherit! :complete
     # Pods for testing
   end
@@ -25,10 +23,10 @@ target 'AwesomeProject' do
   end
 end
 
-target 'AwesomeProject-tvOS' do
-  # Pods for AwesomeProject-tvOS
+target 'Gastitos-tvOS' do
+  # Pods for Gastitos-tvOS
 
-  target 'AwesomeProject-tvOSTests' do
+  target 'Gastitos-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
